--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -1,6 +1,6 @@
 ---
 title: vscode-pets Pull Request
-description: "Information about my Pull Request regarding the vscode-pets extension."
+description: 'Information about my Pull Request regarding the vscode-pets extension.'
 date: February 23 2022
 ---
 
