Fix the blog post.

--- a/posts/prettier-website.mdx
+++ b/posts/prettier-website.mdx
@@ -1,5 +1,5 @@
 ---
-title: Prettier Commits
+title: First commit to Prettier
 description: "My First Contribution for Prettier"
 date: April 13 2022
 ---
@@ -12,17 +12,10 @@ In my PR I set out to incorporate the newest information for the website.
 
 First of all I replaced the old State of JS 2020 image with the new 2021 image.
 
-<a>
-<img src="../images/stateOfJs2021.svg">
-</a><br /><br />
-
-Which replaced the old 2020 image.<br />
-
-<a>
-<img src="../images/stateOfJs2020.svg">
-</a>
-
 After replacing the images, I just updated the results to fit the new standard.
+
+[State of JS 2020 Image](https://www.google.com/search?q=state+of+js+2020&rlz=1C1CHBF_enGB1006GB1006&tbm=isch&source=lnms&sa=X&ved=0ahUKEwj7js_Alo_4AhXBS0EAHdUWB5wQ_AUIzwooAQ&biw=1920&bih=937&dpr=1#imgrc=9B1dXSgiRwHHYM)
+[State of JS 2021 Image](https://www.google.com/search?q=state+of+js+2021&rlz=1C1CHBF_enGB1006GB1006&tbm=isch&source=lnms&sa=X&ved=0ahUKEwj7js_Alo_4AhXBS0EAHdUWB5wQ_AUIzwooAQ&biw=1920&bih=937&dpr=1#imgrc=5VIEQ0CHp-wHeM)
 
 ```javascript
 <p>Prettier is regularly used by:</p>
